# fastapi_module

./: .dockerignore  .env.example  .gitignore  ADMIN_PANEL_PLAN.md  AGENT.md  DockerFile  README.md  docker-compose.yaml  manager.py  pyproject.toml  pytest.ini  setup.cmd  setup.ps1  setup.sh
.opencode/skills/: SKILL.md
core/: __init__.py  alembic.ini  config.py
core/auth/: dependencies.py  keep_secret.py
core/cache/: main.py
core/database/: __init__.py  main.py
core/migrations/versions/: 178f077c88fb_resolve_model_changes.py  893db2b91a6d_init.py
core/models/: __init__.py
core/models/base/: __init__.py  admin.py  groups.py  logs.py  main.py  scopes.py  user.py
core/spi/base/: logs.py  users.py
core/tasks/base/: main.py  task_save_logs.py
core/utils/: async_runner.py  logger.py
libs/: __init__.py
libs/fastapi_crudrouter/: __init__.py  pyproject.toml
libs/fastapi_crudrouter/core/: __init__.py  _base.py  _utils.py  sqlmodel_async.py
manager/: __init__.py  manager.py
manager/styles/: manager.tcss
manager/templates/: model_template.mako  router_template.mako
server/: config.py  main.py
server/core/: config.py
server/core/auth/: dependencies.py  keep_secret.py
server/core/cache/: __init__.py  main.py
server/core/database/: __init__.py  main.py
server/core/migrations/: env.py
server/middlewares/: user_in_request.py
server/routes/: __init__.py  admin.py  auth.py  docs.py  main.py  user.py
server/templates/: preview.html  utils.py
tests/core/: test_boundaries.py  test_logic.py
tests/server/: test_main.py
(+43 files in other folders)
