[project]
name = "fastapi-module"
version = "0.1.0"
description = "template modular para fastapi server"
authors = [
    {name = "guzmanantonio867@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10,<=3.16"
dependencies = [
    "fastapi[all] (>=0.127.1,<0.128.0)",
    "sqlmodel (>=0.0.30,<0.0.31)",
    "alembic (>=1.17.2,<2.0.0)",
    "argon2-cffi (>=25.1.0,<26.0.0)",
    "asyncpg (>=0.31.0,<0.32.0)",
    "rich (>=14.2.0,<15.0.0)",
    "jwt (>=1.4.0,<2.0.0)",
    "redis[hiredis] (>=7.1.0,<8.0.0)",
    "celery (>=5.6.2,<6.0.0)",
    "textual (>=7.0.1,<8.0.0)",
    "pyfiglet (>=1.0.4,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pyrefly (>=0.46.1,<0.47.0)",
    "pytest (>=9.0.2,<10.0.0)"
]
